--- a/Bugsnag.Library/Bugsnag.Library.csproj
+++ b/Bugsnag.Library/Bugsnag.Library.csproj
@@ -36,6 +36,7 @@
       <HintPath>..\packages\ServiceStack.Text.3.9.33\lib\net35\ServiceStack.Text.dll</HintPath>
     </Reference>
     <Reference Include="System" />
+    <Reference Include="System.Configuration" />
     <Reference Include="System.Core" />
     <Reference Include="System.Runtime.Serialization" />
     <Reference Include="System.Web" />
