Changed appSetting keys to be play better with others

--- a/Bugsnag.WebTest/Web.config
+++ b/Bugsnag.WebTest/Web.config
@@ -12,10 +12,10 @@
         <add key="UnobtrusiveJavaScriptEnabled" value="true" />
 
         <!-- BugSnag settings -->
-        <add key="apiKey" value="YOUR_API_KEY_HERE" />
-        <add key="releaseStage" value="development" />
-        <add key="notifyReleaseStages" value="development|test" />
-        <add key="useSSL" value="true" />
+        <add key="BugSnagApiKey" value="YOUR_API_KEY_HERE" />
+        <add key="BugSnagReleaseStage" value="development" />
+        <add key="BugSnagNotifyReleaseStages" value="development|test" />
+        <add key="BugSnagUseSSL" value="true" />
 
         <!-- You can even report your current application version to BugSnag -->
         <add key="applicationVersion" value="1.0.1" />
